src/objects/Stars__c.object
<CustomObject>
    <description>Closed won opportunities who become participants in the Astrum Solar Stars program.</description>
    <fields>
        <fullName>Case_Study_Status__c</fullName>
        <label>Case Study Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Case Study Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Planned - Not Yet Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Begun But Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to contact info of star.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stars</relationshipLabel>
        <relationshipName>Stars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Parties__c</fullName>
        <label>Home Parties</label>
        <picklist>
            <picklistValues>
                <fullName>No Home Party Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed to hold Home Party - Yet To Be Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Party Scheduled - Not Yet Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Party Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Referrals_Paid_Out__c</fullName>
        <label>Number of Referrals Paid Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Referrals__c</fullName>
        <label>Number of Referrals Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Relations_Involvement__c</fullName>
        <inlineHelpText>Please describe, in as much depth as possible, the level of PR involvement planned for this Star. If no involvement is planned or has been discussed, write &quot;None Planned.&quot; If specific events or projects have been discussed, please list them.</inlineHelpText>
        <label>Public Relations Involvement</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendations_Requested__c</fullName>
        <label>Customer Recommendations Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Bio_and_Description__c</fullName>
        <label>Star Bio and Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Star</label>
    <nameField>
        <label>Star Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>